# Geant4ZnSe

./: CMakeLists.txt  Proj.cc  README.md  SensitiveDetector.hh  drawer.cc  drawer.hh  drawer_ZnSe.C  drawer_ZnSe.h  my_drawer.C  workspace.code-workspace
ds_ZnSe/: CMakeLists.txt  GNUmakefile  Sipm_props.txt  ZnSe_op_props.txt  debug.mac  ds_ZnSe.cc  init_vis.mac  metal_silicon_op_props.txt
ds_ZnSe/generators_mac/: alpha_generator.mac  gamma_generator.mac  neutron_generator.mac
ds_ZnSe/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh
ds_ZnSe/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
include/: ActionInit.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh
merger/: merger.cc  merger.hh
scripts/: run.mac  vis.mac
src/: ActionInit.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
